2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-pretty-package-name): Signalled an error on
	simple symbols; fix that!

	Reported by Geoff Wozniak.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-current-form-path): Use
	`slime-current-parser-state'.

2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el ([test] fancy-symbol-names): New, hopefully
	comprehensive, test for funky symbol names.
	(slime-check-fancy-symbol-name): Helper.
	(slime-exit-vertical-bars): New function to move out from |foo|.
	(slime-symbol-constituent-at): New predicate to test whether the
	character at point is a valid symbol constituent.
	(slime-beginning-of-symbol, slime-end-of-symbol): Rewritten using
	above two functions and `forward-sexp' that correctly parses
	escapes etc.
	(slime-sexp-at-point): Consider thing at point a symbol first.

2009-02-24  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-forward-cruft): Forward whitespace, reader
	conditonals, comments. Splitted from `slime-forward-sexp'.
	(slime-pretty-package-name): Use it.

2009-02-24  Tobias C. Rittweiler  <tcr@freebits.de>

	Re-checkin my change from 2009-02-14. It seems I didn't actually
	commit it.

2009-02-22  Tobias C. Rittweiler  <tcr@freebits.de>

        `M-x slime-format-string-expand' displays the expansion of a
        format string.

        * slime.el (slime-string-at-point) New.
        (slime-string-at-point-or-error): New.
        (slime-format-string-expand): New; use them.

        * swank-backend.lisp (format-string-expand): New interface.
        * swank.lisp (swank-format-string-expand): New; use it.

2009-02-17  Helmut Eller  <heller@common-lisp.net>

	* swank.lisp (dispatch-event [:emacs-rex]): Reply a :invalid-rpc
	message if the specified thread doesn't exist.
	* slime.el (slime-dispatch-event): Handle :invalid-rpc.
	(slime-init-connection-state): Bind slime-current-thread
	to avoid problems with dead threads.
