@@ -1,5 +1,10 @@
 2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>
 
+	* swank-backend.lisp (warn-unimplemented-interfaces):
+	Bind *PRINT-PRETTY* to T. Otherwise no sugar formatting on CCL.
+
+2009-02-26  Tobias C. Rittweiler  <tcr@freebits.de>
+
 	* slime.el (slime-pretty-package-name): Signalled an error on
 	simple symbols; fix that!
 
